--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 </head>     
 <body>
 <center>
-
-  <br><br><br><br><br><br><br><br>
-  <h1>Autocomplete Product</h1>
-
+  <br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <table>
+  <tr><th><h1>Autocomplete Search Suggestions</h1></th></tr>
 <!--Make sure the form has the autocomplete function switched off:-->
-<form autocomplete="off" action="https://www.bestbuy.com/site/searchpage.jsp?">
+<tr><td><br><form autocomplete="off" action="https://www.bestbuy.com/site/searchpage.jsp?">
   <div class="autocomplete" style="width:500px;">
-    Start typing<br>
-    <input id="myInput" type="text" name="st" placeholder="">
+    <input id="myInput" type="text" name="st" placeholder="Search">
   </div>
   <input type="submit">
-</form>
+  <br><br>
+  <font size="3" color="Gray">Start typing...</font>
+</form></td></tr></table>
 </center>
-
 </body>
 </html>
