--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 <center>
   <br><br><br><br><br><br><br><br><br><br><br><br><br>
   <table>
-  <tr><th><h1>Autocomplete Search Suggestions</h1></th></tr>
-<!--Make sure the form has the autocomplete function switched off:-->
-<tr><td><br><form autocomplete="off" name="form1" action="https://www.bestbuy.com/site/searchpage.jsp?">
+  <tr><th><h1 style="color:#616A6B">Product Search</h1></th></tr>
+<tr><td><form autocomplete="off" name="form1" action="https://www.bestbuy.com/site/searchpage.jsp?">
   <div class="autocomplete" style="width:500px;">
-    <input id="myInput" type="text" name="st" placeholder="Search">
+    <font size="3" color="Gray" size 3> &nbsp Start typing...</font><input id="myInput" type="text" name="st" placeholder="Search">
   </div>
   <input type="submit">
-  <br><br>
-  <font size="3" color="Gray">Start typing...</font>
+  <br>
+  <font id="speed" size=2></font>
 </form></td></tr></table>
 </center>
 <script type="text/javascript" src="js/autocomp.js"></script>
